y.output
State 43 conflicts: 1 shift/reduce
State 52 conflicts: 3 shift/reduce
State 74 conflicts: 9 shift/reduce
State 97 conflicts: 3 shift/reduce
State 124 conflicts: 1 shift/reduce
State 126 conflicts: 3 shift/reduce
State 127 conflicts: 3 shift/reduce
State 168 conflicts: 3 shift/reduce
State 169 conflicts: 3 shift/reduce
State 170 conflicts: 3 shift/reduce
State 171 conflicts: 3 shift/reduce
State 172 conflicts: 3 shift/reduce
State 173 conflicts: 3 shift/reduce
State 174 conflicts: 3 shift/reduce
State 175 conflicts: 3 shift/reduce
State 176 conflicts: 3 shift/reduce
State 177 conflicts: 3 shift/reduce
State 178 conflicts: 3 shift/reduce
State 179 conflicts: 3 shift/reduce
State 180 conflicts: 3 shift/reduce
State 223 conflicts: 5 shift/reduce
State 239 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decs

    2 decs: funcAndVar
    3     | jsLoad
    4     | classDec
    5     | templateDec
    6     | jsExport
    7     | templateDec decs
    8     | classDec decs
    9     | jsLoad decs
   10     | funcAndVar decs
   11     | jsExport decs

   12 funcAndVar: declare
   13           | funcDec

   14 exp: INT
   15    | STRING
   16    | REAL
   17    | NUL
   18    | CHAR
   19    | TRUEE
   20    | FALSEE
   21    | exp PLUS exp
   22    | exp MINUS exp
   23    | exp TIMES exp
   24    | exp DIVIDE exp
   25    | exp MOD exp
   26    | MINUS exp
   27    | exp EQ exp
   28    | exp NEQ exp
   29    | exp GE exp
   30    | exp GT exp
   31    | exp LE exp
   32    | exp LT exp
   33    | varExp LPAREN explist RPAREN
   34    | LPAREN exp RPAREN
   35    | exp AND exp
   36    | exp OR exp
   37    | AMPERSAND lvalue
   38    | SIZEOF LPAREN lvalue RPAREN
   39    | LBRACK explist RBRACK
   40    | varExp
   41    | funcExp

   42 varExp: lvalue
   43       | exp DOT id
   44       | exp LBRACK exp RBRACK
   45       | exp RIGHTARROW id

   46 funcExp: LPAREN tyfield RPAREN ARROW LPAREN tyfield RPAREN stm

   47 stm: funcDec
   48    | funcCall SEMICOLON
   49    | assign SEMICOLON
   50    | declare
   51    | if
   52    | while
   53    | for
   54    | return SEMICOLON
   55    | loop
   56    | BREAK SEMICOLON
   57    | CONTINUE SEMICOLON
   58    | LBRACE stmlist RBRACE

   59 stmlist: stm
   60        | stm stmlist

   61 return: RETURN
   62       | RETURN LPAREN exp RPAREN

   63 type: VOID
   64     | INTTYPE
   65     | REALTYPE
   66     | BOOLEAN
   67     | CHARTYPE
   68     | SHORTTYPE
   69     | id
   70     | TIMES type
   71     | id LT type GT

   72 tyfield: %empty
   73        | VOID
   74        | tyfield1

   75 tyfield1: type COLON lvalue
   76         | FUNCTION COLON id LPAREN tyfield RPAREN ARROW LPAREN tyfield RPAREN
   77         | type COLON lvalue COMMA tyfield1
   78         | FUNCTION COLON id LPAREN tyfield RPAREN ARROW LPAREN tyfield RPAREN COMMA tyfield1

   79 funcDec: FUNCTION COLON id LPAREN tyfield RPAREN ARROW LPAREN tyfield RPAREN stm

   80 funcCall: varExp LPAREN RPAREN
   81         | varExp LPAREN explist RPAREN

   82 jsLoad: FUNCTION COLON id LPAREN tyfield RPAREN ARROW LPAREN tyfield RPAREN ASSIGN JSLOAD LPAREN STRING COMMA STRING RPAREN SEMICOLON

   83 jsExport: JSEXPORT LPAREN id COMMA STRING RPAREN SEMICOLON

   84 funcvarlist: funcAndVar
   85            | funcAndVar funcvarlist

   86 memlist: funcvarlist
   87        | PUBLIC COLON funcvarlist
   88        | PROTECTED COLON funcvarlist
   89        | PRIVATE COLON funcvarlist

   90 mems: memlist
   91     | memlist mems

   92 classDec: CLASS COLON id LBRACE mems RBRACE
   93         | CLASS COLON id LEFTARROW id LBRACE mems RBRACE

   94 templateDec: TYPE LT id GT COLON funcDec
   95            | TYPE LT id GT COLON classDec

   96 assign: lvalue ASSIGN exp
   97       | lvalue PLUS PLUS
   98       | lvalue MINUS MINUS
   99       | lvalue PLUS ASSIGN exp
  100       | lvalue MINUS ASSIGN exp

  101 declare: type COLON assign SEMICOLON
  102        | type COLON lvalue SEMICOLON
  103        | type COLON lvalue LBRACK RBRACK SEMICOLON
  104        | type COLON id LPAREN explist RPAREN SEMICOLON
  105        | type COLON id SEMICOLON

  106 if: IF LPAREN exp RPAREN THEN stm
  107   | IF LPAREN exp RPAREN THEN stm ELSE stm

  108 while: LPAREN exp RPAREN TO stm

  109 for: LPAREN stm RPAREN FROM LPAREN exp RPAREN TO LPAREN stm RPAREN stm
  110    | LPAREN exp RPAREN REPEAT stm

  111 loop: LOOP stm

  112 explist: exp COMMA explist
  113        | exp
  114        | %empty

  115 id: ID

  116 lvalue: id
  117       | lvalue DOT id
  118       | TIMES lvalue
  119       | lvalue LBRACK exp RBRACK
  120       | lvalue RIGHTARROW id


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CHAR <cval> (258) 18
    ID <sval> (259) 115
    STRING <sval> (260) 15 82 83
    INT <ival> (261) 14
    REAL <fval> (262) 16
    COMMA (263) 77 78 82 83 112
    COLON (264) 75 76 77 78 79 82 87 88 89 92 93 94 95 101 102 103 104 105
    SEMICOLON (265) 48 49 54 56 57 82 83 101 102 103 104 105
    LPAREN (266) 33 34 38 46 62 76 78 79 80 81 82 83 104 106 107 108 109 110
    RPAREN (267) 33 34 38 46 62 76 78 79 80 81 82 83 104 106 107 108 109 110
    LBRACK (268) 39 44 103 119
    RBRACK (269) 39 44 103 119
    LBRACE (270) 58 92 93
    RBRACE (271) 58 92 93
    DOT (272) 43 117
    PLUS (273) 21 97 99
    MINUS (274) 22 26 98 100
    TIMES (275) 23 70 118
    DIVIDE (276) 24
    EQ (277) 27
    NEQ (278) 28
    LT (279) 32 71 94 95
    LE (280) 31
    GT (281) 30 71 94 95
    GE (282) 29
    AND (283) 35
    OR (284) 36
    ASSIGN (285) 82 96 99 100
    IF (286) 106 107
    THEN (287) 106 107
    ELSE (288) 107
    FROM (289) 109
    TO (290) 108 109
    BREAK (291) 56
    INTTYPE (292) 64
    REALTYPE (293) 65
    CONTINUE (294) 57
    RETURN (295) 61 62
    TYPE (296) 94 95
    VOID (297) 63 73
    NUL (298) 17
    TRUEE (299) 19
    FALSEE (300) 20
    BOOLEAN (301) 66
    CHARTYPE (302) 67
    MOD (303) 25
    AMPERSAND (304) 37
    SHORTTYPE (305) 68
    FUNCTION (306) 76 78 79 82
    ARROW (307) 46 76 78 79 82
    LOOP (308) 111
    JSLOAD (309) 82
    SIZEOF (310) 38
    CLASS (311) 92 93
    LEFTARROW (312) 93
    PRIVATE (313) 89
    PUBLIC (314) 87
    PROTECTED (315) 88
    RIGHTARROW (316) 45 120
    REPEAT (317) 110
    JSEXPORT (318) 83
    UMINUS (319)
    LOWER_THAN_ELSE (320)


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    program (67)
        on left: 1
        on right: 0
    decs <decList> (68)
        on left: 2 3 4 5 6 7 8 9 10 11
        on right: 1 7 8 9 10 11
    funcAndVar <dec> (69)
        on left: 12 13
        on right: 2 10 84 85
    exp <exp> (70)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 21 22 23 24 25 26 27 28 29 30 31 32 34 35 36 43 44 45 62 96 99 100 106 107 108 109 110 112 113 119
    varExp <exp> (71)
        on left: 42 43 44 45
        on right: 33 40 80 81
    funcExp <exp> (72)
        on left: 46
        on right: 41
    stm <stm> (73)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58
        on right: 46 59 60 79 106 107 108 109 110 111
    stmlist <stmList> (74)
        on left: 59 60
        on right: 58 60
    return <stm> (75)
        on left: 61 62
        on right: 54
    type <type> (76)
        on left: 63 64 65 66 67 68 69 70 71
        on right: 70 71 75 77 101 102 103 104 105
    tyfield <fieldList> (77)
        on left: 72 73 74
        on right: 46 76 78 79 82
    tyfield1 <fieldList> (78)
        on left: 75 76 77 78
        on right: 74 77 78
    funcDec <dec> (79)
        on left: 79
        on right: 13 47 94
    funcCall <stm> (80)
        on left: 80 81
        on right: 48
    jsLoad <dec> (81)
        on left: 82
        on right: 3 9
    jsExport <dec> (82)
        on left: 83
        on right: 6 11
    funcvarlist <decList> (83)
        on left: 84 85
        on right: 85 86 87 88 89
    memlist <memList> (84)
        on left: 86 87 88 89
        on right: 90 91
    mems <memList> (85)
        on left: 90 91
        on right: 91 92 93
    classDec <dec> (86)
        on left: 92 93
        on right: 4 8 95
    templateDec <dec> (87)
        on left: 94 95
        on right: 5 7
    assign <stm> (88)
        on left: 96 97 98 99 100
        on right: 49 101
    declare <dec> (89)
        on left: 101 102 103 104 105
        on right: 12 50
    if <stm> (90)
        on left: 106 107
        on right: 51
    while <stm> (91)
        on left: 108
        on right: 52
    for <stm> (92)
        on left: 109 110
        on right: 53
    loop <stm> (93)
        on left: 111
        on right: 55
    explist <expList> (94)
        on left: 112 113 114
        on right: 33 39 81 104 112
    id <sym> (95)
        on left: 115
        on right: 43 45 69 71 76 78 79 82 83 92 93 94 95 104 105 116 117 120
    lvalue <var> (96)
        on left: 116 117 118 119 120
        on right: 37 38 42 75 77 96 97 98 99 100 102 103 117 118 119 120


State 0

    0 $accept: . program $end

    ID         shift, and go to state 1
    TIMES      shift, and go to state 2
    INTTYPE    shift, and go to state 3
    REALTYPE   shift, and go to state 4
    TYPE       shift, and go to state 5
    VOID       shift, and go to state 6
    BOOLEAN    shift, and go to state 7
    CHARTYPE   shift, and go to state 8
    SHORTTYPE  shift, and go to state 9
    FUNCTION   shift, and go to state 10
    CLASS      shift, and go to state 11
    JSEXPORT   shift, and go to state 12

    program      go to state 13
    decs         go to state 14
    funcAndVar   go to state 15
    type         go to state 16
    funcDec      go to state 17
    jsLoad       go to state 18
    jsExport     go to state 19
    classDec     go to state 20
    templateDec  go to state 21
    declare      go to state 22
    id           go to state 23


State 1

  115 id: ID .

    $default  reduce using rule 115 (id)


State 2

   70 type: TIMES . type

    ID         shift, and go to state 1
    TIMES      shift, and go to state 2
    INTTYPE    shift, and go to state 3
    REALTYPE   shift, and go to state 4
    VOID       shift, and go to state 6
    BOOLEAN    shift, and go to state 7
    CHARTYPE   shift, and go to state 8
    SHORTTYPE  shift, and go to state 9

    type  go to state 24
    id    go to state 23


State 3

   64 type: INTTYPE .

    $default  reduce using rule 64 (type)


State 4

   65 type: REALTYPE .

    $default  reduce using rule 65 (type)


State 5

   94 templateDec: TYPE . LT id GT COLON funcDec
   95            | TYPE . LT id GT COLON classDec

    LT  shift, and go to state 25


State 6

   63 type: VOID .

    $default  reduce using rule 63 (type)


State 7

   66 type: BOOLEAN .

    $default  reduce using rule 66 (type)


State 8

   67 type: CHARTYPE .

    $default  reduce using rule 67 (type)


State 9

   68 type: SHORTTYPE .

    $default  reduce using rule 68 (type)


State 10

   79 funcDec: FUNCTION . COLON id LPAREN tyfield RPAREN ARROW LPAREN tyfield RPAREN stm
   82 jsLoad: FUNCTION . COLON id LPAREN tyfield RPAREN ARROW LPAREN tyfield RPAREN ASSIGN JSLOAD LPAREN STRING COMMA STRING RPAREN SEMICOLON

    COLON  shift, and go to state 26


State 11

   92 classDec: CLASS . COLON id LBRACE mems RBRACE
   93         | CLASS . COLON id LEFTARROW id LBRACE mems RBRACE

    COLON  shift, and go to state 27


State 12

   83 jsExport: JSEXPORT . LPAREN id COMMA STRING RPAREN SEMICOLON

    LPAREN  shift, and go to state 28


State 13

    0 $accept: program . $end

    $end  shift, and go to state 29


State 14

    1 program: decs .

    $default  reduce using rule 1 (program)


State 15

    2 decs: funcAndVar .
   10     | funcAndVar . decs

    ID         shift, and go to state 1
    TIMES      shift, and go to state 2
    INTTYPE    shift, and go to state 3
    REALTYPE   shift, and go to state 4
    TYPE       shift, and go to state 5
    VOID       shift, and go to state 6
    BOOLEAN    shift, and go to state 7
    CHARTYPE   shift, and go to state 8
    SHORTTYPE  shift, and go to state 9
    FUNCTION   shift, and go to state 10
    CLASS      shift, and go to state 11
    JSEXPORT   shift, and go to state 12

    $default  reduce using rule 2 (decs)

    decs         go to state 30
    funcAndVar   go to state 15
    type         go to state 16
    funcDec      go to state 17
    jsLoad       go to state 18
    jsExport     go to state 19
    classDec     go to state 20
    templateDec  go to state 21
    declare      go to state 22
    id           go to state 23


State 16

  101 declare: type . COLON assign SEMICOLON
  102        | type . COLON lvalue SEMICOLON
  103        | type . COLON lvalue LBRACK RBRACK SEMICOLON
  104        | type . COLON id LPAREN explist RPAREN SEMICOLON
  105        | type . COLON id SEMICOLON

    COLON  shift, and go to state 31


State 17

   13 funcAndVar: funcDec .

    $default  reduce using rule 13 (funcAndVar)


State 18

    3 decs: jsLoad .
    9     | jsLoad . decs

    ID         shift, and go to state 1
    TIMES      shift, and go to state 2
    INTTYPE    shift, and go to state 3
    REALTYPE   shift, and go to state 4
    TYPE       shift, and go to state 5
    VOID       shift, and go to state 6
    BOOLEAN    shift, and go to state 7
    CHARTYPE   shift, and go to state 8
    SHORTTYPE  shift, and go to state 9
    FUNCTION   shift, and go to state 10
    CLASS      shift, and go to state 11
    JSEXPORT   shift, and go to state 12

    $default  reduce using rule 3 (decs)

    decs         go to state 32
    funcAndVar   go to state 15
    type         go to state 16
    funcDec      go to state 17
    jsLoad       go to state 18
    jsExport     go to state 19
    classDec     go to state 20
    templateDec  go to state 21
    declare      go to state 22
    id           go to state 23


State 19

    6 decs: jsExport .
   11     | jsExport . decs

    ID         shift, and go to state 1
    TIMES      shift, and go to state 2
    INTTYPE    shift, and go to state 3
    REALTYPE   shift, and go to state 4
    TYPE       shift, and go to state 5
    VOID       shift, and go to state 6
    BOOLEAN    shift, and go to state 7
    CHARTYPE   shift, and go to state 8
    SHORTTYPE  shift, and go to state 9
    FUNCTION   shift, and go to state 10
    CLASS      shift, and go to state 11
    JSEXPORT   shift, and go to state 12

    $default  reduce using rule 6 (decs)

    decs         go to state 33
    funcAndVar   go to state 15
    type         go to state 16
    funcDec      go to state 17
    jsLoad       go to state 18
    jsExport     go to state 19
    classDec     go to state 20
    templateDec  go to state 21
    declare      go to state 22
    id           go to state 23


State 20

    4 decs: classDec .
    8     | classDec . decs

    ID         shift, and go to state 1
    TIMES      shift, and go to state 2
    INTTYPE    shift, and go to state 3
    REALTYPE   shift, and go to state 4
    TYPE       shift, and go to state 5
    VOID       shift, and go to state 6
    BOOLEAN    shift, and go to state 7
    CHARTYPE   shift, and go to state 8
    SHORTTYPE  shift, and go to state 9
    FUNCTION   shift, and go to state 10
    CLASS      shift, and go to state 11
    JSEXPORT   shift, and go to state 12

    $default  reduce using rule 4 (decs)

    decs         go to state 34
    funcAndVar   go to state 15
    type         go to state 16
    funcDec      go to state 17
    jsLoad       go to state 18
    jsExport     go to state 19
    classDec     go to state 20
    templateDec  go to state 21
    declare      go to state 22
    id           go to state 23


State 21

    5 decs: templateDec .
    7     | templateDec . decs
